localization/v2.5.x/site/en/integrations/integrations_overview.md
---
id: integrations_overview.md
summary: >-
  This page provides a list of tutorials for you to interact with Milvus and
  third-party tools.
title: Integrations Overview
---
<h1 id="Integrations-Overview" class="common-anchor-header">Integrations Overview<button data-href="#Integrations-Overview" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h1><p>This page provides a list of tutorials for you to interact with Milvus and third-party tools.</p>
<table>
<thead>
<tr><th>Tutorial</th><th>Use Case</th><th>Partners or Stacks</th></tr>
</thead>
<tbody>
<tr><td><a href="/docs/v2.5.x/integrate_with_llamaindex.md">RAG with Milvus and LlamaIndex</a></td><td>RAG</td><td>Milvus, LLamaIndex</td></tr>
<tr><td><a href="/docs/v2.5.x/integrate_with_langchain.md">RAG with Milvus and LangChain</a></td><td>RAG</td><td>Milvus, LangChain</td></tr>
<tr><td><a href="/docs/v2.5.x/milvus_hybrid_search_retriever.md">Milvus Hybrid Search Retriever in LangChain</a></td><td>Hybrid Search</td><td>Milvus, LangChain</td></tr>
<tr><td><a href="/docs/v2.5.x/basic_usage_langchain.md">Use Milvus as a Vector Store in LangChain</a></td><td>Semantic Search</td><td>Milvus, LangChain</td></tr>
<tr><td><a href="/docs/v2.5.x/full_text_search_with_langchain.md">Using Full-Text Search with LangChain and Milvus</a></td><td>Full-Text Search</td><td>Milvus, LangChain</td></tr>
<tr><td><a href="/docs/v2.5.x/integrate_with_haystack.md">RAG with Milvus and Haystack</a></td><td>RAG</td><td>Milvus, Haystack</td></tr>
<tr><td><a href="/docs/v2.5.x/llamaindex_milvus_async.md">RAG with Milvus and LlamaIndex Async API</a></td><td>Ochestration</td><td>Milvus, LlamaIndex</td></tr>
<tr><td><a href="/docs/v2.5.x/milvus_rag_with_vllm.md">Building RAG with Milvus, vLLM, and Llama 3.1</a></td><td>RAG</td><td>Milvus, vLLM, LlamaIndex</td></tr>
<tr><td><a href="/docs/v2.5.x/llamaindex_milvus_full_text_search.md">Using Full-Text Search with LlamaIndex and Milvus</a></td><td>Full-Text Search</td><td>Milvus, LlamaIndex</td></tr>
<tr><td><a href="/docs/v2.5.x/dify_with_milvus.md">Deploying Dify with Milvus</a></td><td>Ochestration</td><td>Milvus, Dify</td></tr>
<tr><td><a href="/docs/v2.5.x/rag_with_langflow.md">Building a RAG System Using Langflow with Milvus</a></td><td>Ochestration</td><td>Milvus, Langflow</td></tr>
<tr><td><a href="/docs/v2.5.x/use_milvus_in_private_gpt.md">Use Milvus in PrivateGPT</a></td><td>Ochestration</td><td>vector search</td></tr>
<tr><td><a href="/docs/v2.5.x/use_milvus_in_docsgpt.md">Use Milvus in DocsGPT</a></td><td>Ochestration</td><td>DocsGPT, Milvus</td></tr>
<tr><td><a href="/docs/v2.5.x/use_milvus_with_sambanova.md">Use Milvus with SambaNova</a></td><td>Orchestration</td><td>Milvus, SambaNova</td></tr>
<tr><td><a href="/docs/v2.5.x/milvus_rag_with_dynamiq.md">Getting Started with Dynamiq and Milvus</a></td><td>Orchestration</td><td>Milvus, Dynamiq</td></tr>
<tr><td><a href="/docs/v2.5.x/llama_stack_with_milvus.md">Build RAG with Llama Stack with Milvus</a></td><td>Orchestration</td><td>Milvus, Llama Stack</td></tr>
<tr><td><a href="/docs/v2.5.x/integrate_with_memgpt.md">Chatbot Agent with Milvus and MemGPT</a></td><td>Agent</td><td>Milvus, MemGPT</td></tr>
<tr><td><a href="/docs/v2.5.x/llama_agents_metadata.md">Multi-agent Systems with Mistral AI, Milvus and Llama-agents</a></td><td>Agent</td><td>Milvus, Mistral AI, LlamaIndex</td></tr>
<tr><td><a href="/docs/v2.5.x/quickstart_mem0_with_milvus.md">Getting Started with Mem0 and Milvus</a></td><td>Agents</td><td>Mem0, Milvus</td></tr>
<tr><td><a href="/docs/v2.5.x/integrate_with_agno.md">Integrate Milvus with Agno</a></td><td>Agents</td><td>Milvus, Agno</td></tr>
<tr><td><a href="/docs/v2.5.x/milvus_and_mcp.md">MCP + Milvus: Connecting AI with Vector Databases</a></td><td>Agents</td><td>Milvus, MCP</td></tr>
<tr><td><a href="/docs/v2.5.x/openai_agents_milvus.md">Milvus Integration with OpenAI Agents: A Step-by-Step Guide</a></td><td>Agents</td><td>Milvus, OpenAI</td></tr>
<tr><td><a href="/docs/v2.5.x/integrate_with_ragas.md">RAG Evaluation with Ragas and Milvus</a></td><td>Evaluation</td><td>Milvus, Ragas</td></tr>
<tr><td><a href="/docs/v2.5.x/evaluation_with_deepeval.md">Evaluation with DeepEval</a></td><td>Evaluation & Observability</td><td>Milvus, DeepEval</td></tr>
<tr><td><a href="/docs/v2.5.x/evaluation_with_phoenix.md">Evaluation with Arize Pheonix</a></td><td>Evaluation & Observability</td><td>Milvus, Arize Pheonix</td></tr>
<tr><td><a href="/docs/v2.5.x/integrate_with_langfuse.md">Milvus in Langfuse</a></td><td>Observability</td><td>Milvus, Langfuse</td></tr>
<tr><td><a href="/docs/v2.5.x/integrate_with_openai.md">Semantic Search with Milvus and OpenAI</a></td><td>Semantic Search</td><td>Milvus, OpenAI</td></tr>
<tr><td><a href="/docs/v2.5.x/integrate_with_cohere.md">Question Answering Using Milvus and Cohere</a></td><td>Semantic Search</td><td>Milvus, Cohere</td></tr>
<tr><td><a href="/docs/v2.5.x/integrate_with_hugging-face.md">Question Answering using Milvus and HuggingFace</a></td><td>Question Answering</td><td>Milvus, HuggingFace</td></tr>
<tr><td><a href="/docs/v2.5.x/integrate_with_pytorch.md">Image Search using Milvus and Pytorch</a></td><td>Semantic Search</td><td>Milvus, Pytorch</td></tr>
<tr><td><a href="/docs/v2.5.x/integrate_with_sentencetransformers.md">Movie Search using Milvus and SentenceTransfromers</a></td><td>Semantic Search</td><td>Milvus, SentenceTransformers</td></tr>
<tr><td><a href="/docs/v2.5.x/integrate_with_voxel51.md">Conduct Vision Searches with Milvus and FiftyOne</a></td><td>Semantic Search</td><td>Milvus, FiftyOne</td></tr>
<tr><td><a href="/docs/v2.5.x/integrate_with_voyageai.md">Semantic Search with Milvus and VoyageAI</a></td><td>Semantic Search</td><td>Milvus, VoyageAI</td></tr>
<tr><td><a href="/docs/v2.5.x/integrate_with_bentoml.md">RAG with Milvus and BentoML</a></td><td>RAG</td><td>Milvus, BentoML</td></tr>
<tr><td><a href="/docs/v2.5.x/integrate_with_dspy.md">RAG with Milvus and DSPy</a></td><td>RAG</td><td>Milvus, DSPy</td></tr>
<tr><td><a href="/docs/v2.5.x/integrate_with_jina.md">Semantic Search with Milvus and Jina</a></td><td>Semantic Search</td><td>Milvus, Jina</td></tr>
<tr><td><a href="/docs/v2.5.x/integrate_with_snowpark.md">Milvus on Snowpark Container Services</a></td><td>Data Connection</td><td>Milvus, Snowpark</td></tr>
<tr><td><a href="/docs/v2.5.x/integrate_with_whyhow.md">Rule-based Retrieval with Milvus and WhyHow</a></td><td>Question Answering</td><td>Milvus, WhyHow</td></tr>
<tr><td><a href="/docs/v2.5.x/integrate_with_fastgpt.md">How to deploy FastGPT with Milvus</a></td><td>RAG</td><td>Milvus, FastGPT</td></tr>
<tr><td><a href="/docs/v2.5.x/integrate_with_vanna.md">Write SQL with Vanna and Milvus</a></td><td>RAG</td><td>Milvus, Vanna</td></tr>
<tr><td><a href="/docs/v2.5.x/integrate_with_camel.md">RAG with Milvus and Camel</a></td><td>RAG</td><td>Milvus, Camel</td></tr>
<tr><td><a href="/docs/v2.5.x/integrate_with_airbyte.md">Airbyte & Milvus: Open-Source Data Movement Infrastructure</a></td><td>Data Connection</td><td>Milvus, Airbyte</td></tr>
<tr><td><a href="/docs/v2.5.x/video_search_with_twelvelabs_and_milvus.md">Advanced Video Search: Leveraging Twelve Labs and Milvus for Semantic Retrieval</a></td><td>Semantic Search</td><td>Milvus, Twelve Labs</td></tr>
<tr><td><a href="/docs/v2.5.x/kafka-connect-milvus.md">Connect Kafka with Milvus</a></td><td>Data Sources</td><td>Milvus, Kafka</td></tr>
<tr><td><a href="/docs/v2.5.x/kotaemon_with_milvus.md">Kotaemon RAG with Milvus</a></td><td>RAG</td><td>Milvus, Kotaemon</td></tr>
<tr><td><a href="/docs/v2.5.x/apify_milvus_rag.md">Retrieval-Augmented Generation: Crawling Websites with Apify and Saving Data to Milvus for Question Answering</a></td><td>Data Sources</td><td>Milvus, Apify</td></tr>
<tr><td><a href="/docs/v2.5.x/build_rag_on_arm.md">Build RAG on Arm Architecture</a></td><td>RAG</td><td>Milvus, Arm</td></tr>
<tr><td><a href="/docs/v2.5.x/build_RAG_with_milvus_and_fireworks.md">Build RAG with Milvus and Fireworks AI</a></td><td>LLMs</td><td>Milvus, Fireworks AI</td></tr>
<tr><td><a href="/docs/v2.5.x/build_RAG_with_milvus_and_lepton.md">Build RAG with Milvus and Lepton AI</a></td><td>LLMs</td><td>Milvus, Lepton AI</td></tr>
<tr><td><a href="/docs/v2.5.x/build_RAG_with_milvus_and_siliconflow.md">Build RAG with Milvus and SiliconFlow</a></td><td>LLMs</td><td>Milvus, SiliconFlow</td></tr>
<tr><td><a href="/docs/v2.5.x/rag_with_milvus_and_unstructured.md">Build a RAG with Milvus and Unstructured</a></td><td>Data Sources</td><td>Milvus, Unstructured</td></tr>
<tr><td><a href="/docs/v2.5.x/RAG_with_pii_and_milvus.md">Build RAG with Milvus + PII Masker</a></td><td>Data Sources</td><td>Milvus, PII Masker</td></tr>
<tr><td><a href="/docs/v2.5.x/knowledge_table_with_milvus.md">Knowledge Table with Milvus</a></td><td>Knowledge Engineering</td><td>Knowledge Table, Milvus</td></tr>
<tr><td><a href="/docs/v2.5.x/build_RAG_with_milvus_and_cognee.md">Build RAG with Milvus and Cognee</a></td><td>Knowledge Engineering</td><td>Milvus, Cognee</td></tr>
<tr><td><a href="/docs/v2.5.x/build_RAG_with_milvus_and_gemini.md">Build RAG with Milvus and Gemini</a></td><td>LLMs</td><td>Milvus, Gemini</td></tr>
<tr><td><a href="/docs/v2.5.x/build_RAG_with_milvus_and_ollama.md">Build RAG with Milvus and Ollama</a></td><td>LLMs</td><td>Milvus, Ollama</td></tr>
<tr><td><a href="/docs/v2.5.x/build_RAG_with_milvus_and_deepseek.md">Build RAG with Milvus and DeepSeek</a></td><td>LLMs</td><td>Milvus, DeepSeek</td></tr>
<tr><td><a href="/docs/v2.5.x/build_RAG_with_milvus_and_crawl4ai.md">Building RAG with Milvus and Crawl4AI</a></td><td>Data Sources</td><td>Milvus, Crawl4AI</td></tr>
<tr><td><a href="/docs/v2.5.x/build_RAG_with_milvus_and_firecrawl.md">Building RAG with Milvus and Firecrawl</a></td><td>Data Sources</td><td>Milvus, Firecrawl</td></tr>
<tr><td><a href="/docs/v2.5.x/integration_with_mindsdb.md">Integrate Milvus with MindsDB</a></td><td>Knowledge Engineering</td><td>Milvus, MindsDB</td></tr>
<tr><td><a href="/docs/v2.5.x/build_RAG_with_milvus_and_feast.md">Build RAG with Milvus and Feast</a></td><td>Data Sources</td><td>Milvus, Feast</td></tr>
<tr><td><a href="/docs/v2.5.x/build_RAG_with_milvus_and_docling.md">Build RAG with Milvus and Docling</a></td><td>Data Sources</td><td>Milvus, Docling</td></tr>
<tr><td><a href="/docs/v2.5.x/build_RAG_with_milvus_and_embedAnything.md">Building RAG with Milvus and EmbedAnything</a></td><td>Embedding</td><td>Milvus, EmbedAnything</td></tr>
<tr><td><a href="/docs/v2.5.x/milvus_and_n8n.md">Getting Started with Milvus and n8n</a></td><td>Orchestration</td><td>Milvus, n8n</td></tr>
<tr><td><a href="/docs/v2.5.x/use_milvus_in_anythingllm.md">Use Milvus in AnythingLLM</a></td><td>Orchestration</td><td>Milvus, AnythingLLM</td></tr>
<tr><td><a href="/docs/v2.5.x/NLWeb_with_milvus.md">Using NLWeb with Milvus</a></td><td>Data Sources</td><td>Milvus, NLWeb</td></tr>
</tbody>
</table>
